# saciGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh
docs/: CONTRIBUTING.md
examples/: build.sh  composition2d.c
examples/2d/shapes/: CMakeLists.txt  shapes_2d_saci.c
examples/3d/rotating-cube/: CMakeLists.txt  rotating-cube_3d_saci.c
examples/shapes_2d/: CMakeLists.txt  shapes_2d.c
examples/texture/basic-img/: CMakeLists.txt  basic-img_texture_saci.c
saci/: CMakeLists.txt  core.c  core.h  gl.c  gl.h  helpers.c  helpers.h  saci-camera.h  saci-composition.h  saci-event.h  saci-shapes.h  saci-utils.h  saci-windowing.h  saci.c  saci.h  sacigl-event.h  sacigl-rendering.h  sacigl-shadering.h  sacigl-windowing.h  sacigl.c  sacigl.h  scgl.c  scgl.h  shapes.h  texture.h  utils.h
saci/include/: saci-core.h  saci-lib.h  su-utils.h
saci/include/saci-core/: sc-camera.h  sc-event.h  sc-rendering.h  sc-shadering.h  sc-texture.h  sc-windowing.h
saci/include/saci-lib/: sl-camera.h  sl-composition.h  sl-event.h  sl-shapes.h  sl-windowing.h
saci/include/saci-utils/: su-debug.h  su-general.h  su-math.h  su-types.h
saci/src/saci-core/: sc-camera.c  sc-event.c  sc-rendering.c  sc-shadering.c  sc-texture.c  sc-windowing.c
saci/src/saci-utils/: su-debug.c  su-math.c
saci/src/saciCore/: sc-event.c  sc-rendering.c  sc-windowing.c  sc.c
saci/src/saciLib/: sl.c
